--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -65,6 +65,7 @@
     padding: 10px;
     overflow-y: scroll;
     scroll-behavior: smooth;
+    max-width: 98%;
     height: 630px;
     background-color: rgba(10, 26, 42, 0.388);
     border-radius: 10px 20px 20px 10px;
