--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -66,7 +66,7 @@
     overflow-y: scroll;
     scroll-behavior: smooth;
     max-width: 98%;
-    height: 630px;
+    min-height: 90%;
     background-color: rgba(10, 26, 42, 0.388);
     border-radius: 10px 20px 20px 10px;
 }
@@ -84,5 +84,4 @@ position: absolute;
     .sidebar{
         display: none;
     }
-    
 }
